Add sl-tp feature, update readme file, general improvements

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,13 @@ EXECUTE_TRADES=true
 
 # RPC endpoint
 RPC_ENDPOINT=
+
+##SL/TP settings
+# Set to "true" to enable SL/TP management for copied buys, "false" for full copy mode.
+MANAGE_WITH_SLTP=false
+# Percentage gain for take-profit (e.g., 20 for 20%). Required if MANAGE_WITH_SLTP=true.
+TAKE_PROFIT_PERCENTAGE=20
+# Percentage loss for stop-loss (e.g., 10 for 10%). Required if MANAGE_WITH_SLTP=true.
+STOP_LOSS_PERCENTAGE=10
+# Interval in milliseconds to check prices for SL/TP (e.g., 60000 for 1 minute). Required if MANAGE_WITH_SLTP=true.
+PRICE_CHECK_INTERVAL_MS=60000
