--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "npx jest",
     "build": "tsc",
+    "setup": "ts-node src/setup.ts",
     "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^8.2.11",
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
@@ -23,8 +25,8 @@
     "axios": "^1.8.3",
     "bloom-filters": "^3.0.4",
     "bs58": "^6.0.0",
-    "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
+    "inquirer": "^12.6.1",
     "ts-jest": "^29.3.2"
   }
 }
